objects/tffa__Recommendation__c.object
<CustomObject>
    <description>A list of personalized offers for the existing customer. This is on top of the cross sell configuration for the product.</description>
    <fields>
        <fullName>tffa__AcceptedItemIds__c</fullName>
        <description>List of ids or codes (semicolon separated) of accepted (or selected) items out of recommended items.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Accepted item ids</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__ExternalPartyId__c</fullName>
        <description>Id of Party in an external system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>External Party ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__External__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the recommendation originated from an external source.</description>
        <label>External</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__FinancialNeed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to FinancialNeed acting as the source of the recommendation.</description>
        <label>Financial Need</label>
        <referenceTo>tffa__FinancialNeed__c</referenceTo>
        <relationshipLabel>Recommendations</relationshipLabel>
        <relationshipName>Recommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsReferral__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the recommendation is a referral actionable in an external system. If false, the recommendation results in a new submission in the DSP UI.</description>
        <label>Is Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfItems__c</fullName>
        <description>The number of items in the recommendation.</description>
        <label>Number of Items</label>
        <summaryForeignKey>tffa__RecommendationItem__c.tffa__Recommendation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Party (or customer) for which the recommendation was generated.</description>
        <label>Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>Recommendations</relationshipLabel>
        <relationshipName>Recommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__ProcessId__c</fullName>
        <description>The unique identifier of the process that generated this recommendation.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Process id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Product acting as source of the recommendation.</description>
        <label>Source Product</label>
        <referenceTo>tffa__Product__c</referenceTo>
        <relationshipLabel>Recommendations</relationshipLabel>
        <relationshipName>Recommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__Purpose__c</fullName>
        <defaultValue>&quot;CUSTOMER&quot;</defaultValue>
        <description>The purpose of the recommendation. e.g. cross selling, meeting financial needs, etc.</description>
        <label>Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__RecommendationPurpose</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ReferralId__c</fullName>
        <description>Unique id of the referral in the external system post action. Useful for record keeping purposes.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Referral id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__SourceId__c</fullName>
        <description>Source identifier for the recommendation. e.g. Id of RecommendationConfiguration</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Source__c</fullName>
        <description>A logical identifier for the source of the recommendation. Could be name of recommendation system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Status__c</fullName>
        <defaultValue>&quot;OPEN&quot;</defaultValue>
        <description>Current status of recommendation.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__RecommendationStatus</valueSetName>
        </valueSet>
    </fields>
    <label>Recommendation</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__Party__c</columns>
        <columns>tffa__Status__c</columns>
        <columns>tffa__Source__c</columns>
        <columns>tffa__IsReferral__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recommendations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>